--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <center><h1>Heloo world</h1></center> 
+    <center><h1><form style="color: brown;"></form> hello world</h1></center> 
 </body>
 </html>
