--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>เว็บไซต์</title>
 </head>
 <body>
     <center><h1><form style="color: brown;"></form> hello world</h1></center> 
