--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>เว็บไซต์</title>
+    <link rel="icon" href="ppppp.png">
 </head>
 <body>
-    <center><h1><form style="color: brown;"></form> hello world</h1></center> 
+    <center><h1><form style="color: brown;">hello world</form></h1></center> 
 </body>
 </html>
